Login token made available in FederationPrincipal
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1453480 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -33,6 +33,7 @@
     <modules>
         <module>simpleWebapp</module>
         <module>wsclientWebapp</module>
+        <module>springWebapp</module>
         <module>springPreauthWebapp</module>
     </modules>
 </project>
