--- a/plugins/cxf/pom.xml
+++ b/plugins/cxf/pom.xml
@@ -47,7 +47,8 @@
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-ws-security</artifactId>
-            <version>${cxf.version}</version>   
+            <version>${cxf.version}</version>
+            <scope>provided</scope>  
         </dependency>
     </dependencies>
     <build>
