--- a/systests/springPreauthWebapp/src/main/webapp/WEB-INF/web.xml
+++ b/systests/springPreauthWebapp/src/main/webapp/WEB-INF/web.xml
@@ -25,11 +25,22 @@
         <filter-name>filterChainProxy</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
+    
+    <!-- Optional: Cache the security token in Thread Local Storage -->
+	<filter>
+		<filter-name>FederationFilter</filter-name>
+		<filter-class>org.apache.cxf.fediz.cxf.web.FederationFilter</filter-class>
+	</filter>
 
     <filter-mapping>
       <filter-name>filterChainProxy</filter-name>
       <url-pattern>/*</url-pattern>
     </filter-mapping>
+    
+    <filter-mapping>
+		<filter-name>FederationFilter</filter-name>
+		<url-pattern>/secure/*</url-pattern>
+	</filter-mapping>
 
     <!--
       - Loads the root application context of this web app at startup.
