Example wsclientWebapp uses new FederationFilter
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1453533 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/wsclientWebapp/webapp/pom.xml
+++ b/examples/wsclientWebapp/webapp/pom.xml
@@ -57,12 +57,7 @@
             <groupId>org.apache.cxf.fediz</groupId>
             <artifactId>fediz-core</artifactId>
             <version>${project.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf.fediz</groupId>
