--- a/examples/springWebapp/src/main/webapp/WEB-INF/web.xml
+++ b/examples/springWebapp/src/main/webapp/WEB-INF/web.xml
@@ -3,31 +3,29 @@
                       http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0" metadata-complete="true">
 
-	<description>
-    WS Federation Spring Example
-    </description>
-	<display-name>WS Federation Spring Example</display-name>
+    <description>WS Federation Spring Example</description>
+    <display-name>WS Federation Spring Example</display-name>
 	
-      <filter>
-    <filter-name>springSecurityFilterChain</filter-name>
-    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-  </filter>
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
   
     <!-- Optional: Cache the security token in Thread Local Storage -->
-	<filter>
-		<filter-name>FederationFilter</filter-name>
-		<filter-class>org.apache.cxf.fediz.cxf.web.FederationFilter</filter-class>
-	</filter>
+    <filter>
+        <filter-name>FederationFilter</filter-name>
+        <filter-class>org.apache.cxf.fediz.cxf.web.FederationFilter</filter-class>
+    </filter>
 
-  <filter-mapping>
-    <filter-name>springSecurityFilterChain</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
   
-	<filter-mapping>
-		<filter-name>FederationFilter</filter-name>
-		<url-pattern>/secure/*</url-pattern>
-	</filter-mapping>
+    <filter-mapping>
+        <filter-name>FederationFilter</filter-name>
+        <url-pattern>/secure/*</url-pattern>
+    </filter-mapping>
 
     <!--
       - Location of the XML file that defines the root application context
@@ -49,29 +47,29 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
      
-	<servlet>
-		<servlet-name>FederationServlet</servlet-name>
-		<servlet-class>org.apache.cxf.fediz.example.FederationServlet</servlet-class>
-	</servlet>
+    <servlet>
+        <servlet-name>FederationServlet</servlet-name>
+        <servlet-class>org.apache.cxf.fediz.example.FederationServlet</servlet-class>
+    </servlet>
 
-	<servlet-mapping>
-		<servlet-name>FederationServlet</servlet-name>
-		<url-pattern>/secure/fedservlet</url-pattern>
-	</servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FederationServlet</servlet-name>
+        <url-pattern>/secure/fedservlet</url-pattern>
+    </servlet-mapping>
 
-	<servlet-mapping>
-		<servlet-name>FederationServlet</servlet-name>
-		<url-pattern>/secure/admin/fedservlet</url-pattern>
-	</servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FederationServlet</servlet-name>
+        <url-pattern>/secure/admin/fedservlet</url-pattern>
+    </servlet-mapping>
 	
-	<servlet-mapping>
-		<servlet-name>FederationServlet</servlet-name>
-		<url-pattern>/secure/user/fedservlet</url-pattern>
-	</servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FederationServlet</servlet-name>
+        <url-pattern>/secure/user/fedservlet</url-pattern>
+    </servlet-mapping>
 	
-	<servlet-mapping>
-		<servlet-name>FederationServlet</servlet-name>
-		<url-pattern>/secure/manager/fedservlet</url-pattern>
-	</servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FederationServlet</servlet-name>
+        <url-pattern>/secure/manager/fedservlet</url-pattern>
+    </servlet-mapping>
 
 </web-app>
