Integration tests added for spring-security plugin
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1454493 13f79535-47bb-0310-9956-ffa450edef68

--- a/systests/pom.xml
+++ b/systests/pom.xml
@@ -33,8 +33,10 @@
       <module>tests</module>
       <module>simpleWebapp</module>
       <module>springPreauthWebapp</module>
+      <module>springWebapp</module>
       <module>jetty8</module>
       <module>tomcat7</module>
+      <module>spring</module>
    </modules>
 
 </project>
