Spring Security 2 support added
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1455711 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -34,6 +34,7 @@
       <module>tomcat</module>
       <module>jetty</module>
       <module>spring</module>
+      <module>spring2</module>
       <module>cxf</module>
    </modules>
 </project>
