--- a/systests/pom.xml
+++ b/systests/pom.xml
@@ -34,6 +34,7 @@
       <module>simpleWebapp</module>
       <module>springPreauthWebapp</module>
       <module>springWebapp</module>
+      <module>spring2Webapp</module>
       <module>jetty8</module>
       <module>tomcat7</module>
       <module>spring</module>
