added missing example to pom
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1455713 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -34,6 +34,7 @@
         <module>simpleWebapp</module>
         <module>wsclientWebapp</module>
         <module>springWebapp</module>
+        <module>spring2Webapp</module>
         <module>springPreauthWebapp</module>
     </modules>
 </project>
