--- a/plugins/spring2/pom.xml
+++ b/plugins/spring2/pom.xml
@@ -30,18 +30,22 @@
     <packaging>bundle</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>2.0.8.RELEASE</spring.version>
+        <spring.security.version>2.0.8.RELEASE</spring.security.version>
+        <spring.version>2.5.6</spring.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
-            <version>${spring.version}</version>
+            <version>${spring.security.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>2.0.8</version>
+            <version>${spring.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
