--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -26,7 +26,7 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>fediz-idp</artifactId>
-    <name>Apache Fediz IDP (Spring Web Flow)</name>
+    <name>Apache Fediz IDP (Spring Security &amp; Spring Web Flow)</name>
     <packaging>war</packaging>
     <dependencyManagement>
         <dependencies>
@@ -34,6 +34,7 @@
     </dependencyManagement>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring.security.version>3.1.3.RELEASE</spring.security.version>
     </properties>
     <dependencies>
         <dependency>
@@ -48,6 +49,11 @@
 <!--            <version>${spring.version}</version> -->
 <!--         </dependency> -->
         <dependency>
+            <groupId>org.apache.cxf.fediz</groupId>
+            <artifactId>fediz-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
@@ -58,6 +64,16 @@
             <version>2.3.1.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency> 
+        <dependency>
           <groupId>ognl</groupId>
           <artifactId>ognl</artifactId>
           <version>3.0.5</version>
@@ -65,15 +81,9 @@
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
+            <artifactId>slf4j-jdk14</artifactId>
             <version>${slf4j.version}</version>
-            <scope>provided</scope>
         </dependency>
-<!--         <dependency> -->
-<!--             <groupId>org.slf4j</groupId> -->
-<!--             <artifactId>slf4j-jdk14</artifactId> -->
-<!--             <version>${slf4j.version}</version> -->
-<!--         </dependency> -->
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-ws-security</artifactId>
