--- a/services/sts/pom.xml
+++ b/services/sts/pom.xml
@@ -30,6 +30,7 @@
     <packaging>war</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <adapter.resource>file</adapter.resource>
     </properties>
     <dependencies>
         <dependency>
@@ -81,6 +82,12 @@
             <version>${slf4j.version}</version>
             <scope>runtime</scope>
         </dependency>
+  		<dependency>
+			<groupId>org.springframework.ldap</groupId>
+			<artifactId>spring-ldap-core</artifactId>
+			<version>1.3.1.RELEASE</version>
+			<scope>compile</scope>
+		</dependency>        
 <!--
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -89,10 +96,34 @@
 			<scope>provided</scope>
 		</dependency>
 -->
+
    </dependencies>
 
     <build>
         <plugins>
+        	<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.1.1</version>
+				<configuration>
+					<webResources>
+						<resource>
+							<directory>src/main/webapp</directory>
+							<filtering>true</filtering>
+							<includes>
+								<include>**/cxf-transport.xml</include>
+							</includes>
+						</resource>
+						<resource>
+							<directory>src/main/webapp</directory>
+							<filtering>false</filtering>
+							<excludes>
+								<exclude>**/cxf-transport.xml</exclude>
+							</excludes>
+						</resource>
+					</webResources>
+				</configuration>
+			</plugin>
             <!--
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
@@ -120,4 +151,31 @@
         <!-- Name of the generated WAR file -->
         <finalName>fediz-idp-sts</finalName>
     </build>
+    
+    <profiles>
+    	<profile>
+    		<id>ldap</id>
+    		<properties>
+    		<adapter.resource>ldap</adapter.resource>
+    		</properties>
+    		<dependencyManagement>
+				<dependencies>
+		    		<!-- spring-ldap-core uses 3.0.5 -->
+					<dependency>
+						<groupId>org.springframework</groupId>
+						<artifactId>spring-tx</artifactId>
+						<version>${spring.version}</version>
+					</dependency>
+				</dependencies>
+			</dependencyManagement>
+    		<dependencies>
+    			<dependency>
+					<groupId>org.springframework.ldap</groupId>
+					<artifactId>spring-ldap-core</artifactId>
+					<version>1.3.1.RELEASE</version>
+				</dependency>
+    		</dependencies>
+    	</profile>
+    
+    </profiles>
 </project>
