--- a/plugins/spring2/pom.xml
+++ b/plugins/spring2/pom.xml
@@ -21,9 +21,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
-        <artifactId>fediz</artifactId>
+        <artifactId>plugin</artifactId>
         <version>1.1.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>fediz-spring2</artifactId>
     <name>Apache Fediz Plugin Spring2</name>
