Non CXF dependent classes moved to fediz-core
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1495139 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/springPreauthWebapp/src/main/webapp/WEB-INF/web.xml
+++ b/examples/springPreauthWebapp/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,7 @@
     <!-- Optional: Cache the security token in Thread Local Storage -->
 	<filter>
 		<filter-name>FederationFilter</filter-name>
-		<filter-class>org.apache.cxf.fediz.cxf.web.FederationFilter</filter-class>
+		<filter-class>org.apache.cxf.fediz.core.servlet.FederationFilter</filter-class>
 	</filter>
 
     <filter-mapping>
