--- a/systests/springWebapp/src/main/webapp/WEB-INF/web.xml
+++ b/systests/springWebapp/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,7 @@
     <!-- Optional: Cache the security token in Thread Local Storage -->
 	<filter>
 		<filter-name>FederationFilter</filter-name>
-		<filter-class>org.apache.cxf.fediz.cxf.web.FederationFilter</filter-class>
+		<filter-class>org.apache.cxf.fediz.core.servlet.FederationFilter</filter-class>
 	</filter>
 
     <filter-mapping>
