--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -56,4 +56,12 @@
          </plugin>
       </plugins>
    </build>
+   <profiles>
+     <profile>
+       <id>websphere</id>
+       <modules>
+         <module>websphere</module>
+       </modules>
+     </profile>
+   </profiles>
 </project>
