--- a/plugins/websphere/pom.xml
+++ b/plugins/websphere/pom.xml
@@ -27,7 +27,7 @@
 		<dependency>
 			<groupId>org.apache.cxf.fediz</groupId>
 			<artifactId>fediz-core</artifactId>
-			<version>1.1.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 <!-- 
