--- a/services/idp/src/main/resources/logging.properties
+++ b/services/idp/src/main/resources/logging.properties
@@ -52,5 +52,6 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 # messages:
 #com.xyz.foo.level = SEVERE
 org.apache.cxf.fediz.service.idp.level = FINE
+org.apache.cxf.level = FINE
 org.springframework.web.level = FINE
 org.springframework.webflow.level = FINE
