Add the other plugins to the assembly
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1515872 13f79535-47bb-0310-9956-ffa450edef68

--- a/apache-fediz/pom.xml
+++ b/apache-fediz/pom.xml
@@ -55,6 +55,21 @@
             <artifactId>fediz-tomcat</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.cxf.fediz</groupId>
+            <artifactId>fediz-jetty</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf.fediz</groupId>
+            <artifactId>fediz-spring</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf.fediz</groupId>
+            <artifactId>fediz-spring2</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
