--- a/services/sts/src/realms/resources/log4j.properties
+++ b/services/sts/src/realms/resources/log4j.properties
@@ -1,10 +1,11 @@
 # Set root category priority to INFO and its only appender to CONSOLE.
 #log4j.rootCategory=FATAL, CONSOLE
 log4j.rootLogger=INFO, CONSOLE
-log4j.logger.org.apache.cxf.sts=DEBUG, CONSOLE
+log4j.logger.org.apache.cxf.sts=DEBUG, CONSOLE, LOGFILE
 log4j.additivity.org.apache.cxf.sts=false
-log4j.logger.org.apache.cxf.fediz=DEBUG, CONSOLE
+log4j.logger.org.apache.cxf.fediz=DEBUG, CONSOLE, LOGFILE
 log4j.additivity.org.apache.cxf.fediz=false
+log4j.logger.org.apache.cxf.sts.event.LoggerListener=DEBUG, AUDIT
 
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
@@ -12,3 +13,19 @@ log4j.appender.CONSOLE.Threshold=DEBUG
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d [%t] %-5p %c %x - %m%n
 
+# LOGFILE is set to be a File appender using a PatternLayout.
+log4j.appender.LOGFILE=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.LOGFILE.File=${catalina.base}/logs/sts.log
+log4j.appender.LOGFILE.DatePattern='.'yyyy-MM-dd
+log4j.appender.LOGFILE.Append=true
+log4j.appender.LOGFILE.Threshold=INFO
+log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.LOGFILE.layout.ConversionPattern=%d [%t] %-5p %c %x - %m%n
+
+# AUDIT is set to be a File appender using a PatternLayout.
+log4j.appender.AUDIT=org.apache.log4j.FileAppender
+log4j.appender.AUDIT.File=${catalina.base}/logs/audit.log
+log4j.appender.AUDIT.Append=true
+log4j.appender.AUDIT.Threshold=DEBUG
+log4j.appender.AUDIT.layout=org.apache.cxf.sts.event.LoggerPatternLayoutLog4J
+log4j.appender.AUDIT.layout.ConversionPattern=%m%n
