cxf plugin added to distribution
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1519225 13f79535-47bb-0310-9956-ffa450edef68

--- a/apache-fediz/pom.xml
+++ b/apache-fediz/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>fediz-spring2</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.cxf.fediz</groupId>
+            <artifactId>fediz-cxf</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
