[FEDIZ-15] Support the publish of the WS-Federation Metadata document
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1519227 13f79535-47bb-0310-9956-ffa450edef68

--- a/services/idp/src/main/webapp/WEB-INF/web.xml
+++ b/services/idp/src/main/webapp/WEB-INF/web.xml
@@ -34,9 +34,26 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	
+	<servlet>
+		<servlet-name>metadata</servlet-name>
+		<servlet-class>
+			org.apache.cxf.fediz.service.idp.MetadataServlet
+		</servlet-class>
+		<init-param>
+			<param-name>realm</param-name>
+			<param-value>${realm-uri}</param-value>
+		</init-param>
+	</servlet>	
+	
+	
 	<servlet-mapping>
 		<servlet-name>idp</servlet-name>
 		<url-pattern>/federation</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>metadata</servlet-name>
+		<url-pattern>/FederationMetadata/2007-06/FederationMetadata.xml</url-pattern>
 	</servlet-mapping>
 
 	<listener>
