--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -39,16 +39,17 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
-<!--         <dependency> -->
-<!--            <groupId>org.springframework</groupId> -->
-<!--            <artifactId>spring-web</artifactId> -->
-<!--            <version>${spring.version}</version> -->
-<!--         </dependency> -->
         <dependency>
             <groupId>org.apache.cxf.fediz</groupId>
             <artifactId>fediz-core</artifactId>
@@ -113,6 +114,7 @@
 				<filtering>true</filtering>
 				<includes>
 					<include>**/realm.properties</include>
+					<include>**/web.xml</include>
 				</includes>
 			</resource>
     		<resource>
@@ -120,6 +122,7 @@
 				<filtering>false</filtering>
 				<excludes>
 					<exclude>**/realm.properties</exclude>
+					<exclude>**/web.xml</exclude>
 				</excludes>
 			</resource>			
     	</resources>
@@ -145,6 +148,7 @@
 							<filtering>true</filtering>
 							<includes>
 								<include>**/applicationContext.xml</include>
+								<include>**/web.xml</include>
 							</includes>
 						</resource>
 						<resource>
@@ -152,6 +156,7 @@
 							<filtering>false</filtering>
 							<excludes>
 								<exclude>**/applicationContext.xml</exclude>
+								<exclude>**/web.xml</exclude>
 							</excludes>
 						</resource>
 					</webResources>
