--- a/services/idp/src/main/filters/realm-a/env.properties
+++ b/services/idp/src/main/filters/realm-a/env.properties
@@ -2,3 +2,4 @@ realm.STS_URI=REALMA
 realmA.port=9443
 realmB.port=12443
 idp-config=idp-config-realma.xml
+realm-uri=urn:org:apache:cxf:fediz:idp:realm-A
