--- a/services/idp/src/main/filters/realm-b/env.properties
+++ b/services/idp/src/main/filters/realm-b/env.properties
@@ -2,3 +2,4 @@ realm.STS_URI=REALMB
 realmA.port=9443
 realmB.port=12443
 idp-config=idp-config-realmb.xml
+realm-uri=urn:org:apache:cxf:fediz:idp:realm-B
