--- a/services/idp/src/test/resources/stsKeystoreA.properties
+++ b/services/idp/src/test/resources/stsKeystoreA.properties
@@ -2,5 +2,5 @@ org.apache.ws.security.crypto.provider=org.apache.ws.security.components.crypto.
 org.apache.ws.security.crypto.merlin.keystore.type=jks
 org.apache.ws.security.crypto.merlin.keystore.password=storepass
 org.apache.ws.security.crypto.merlin.keystore.alias=realma
-org.apache.ws.security.crypto.merlin.file=stsrealm_a.jks
+org.apache.ws.security.crypto.merlin.keystore.file=stsrealm_a.jks
 
