--- a/services/sts/src/realms/resources/stsKeystoreB.properties
+++ b/services/sts/src/realms/resources/stsKeystoreB.properties
@@ -2,5 +2,5 @@ org.apache.ws.security.crypto.provider=org.apache.ws.security.components.crypto.
 org.apache.ws.security.crypto.merlin.keystore.type=jks
 org.apache.ws.security.crypto.merlin.keystore.password=storepass
 org.apache.ws.security.crypto.merlin.keystore.alias=realmb
-org.apache.ws.security.crypto.merlin.file=stsrealm_b.jks
+org.apache.ws.security.crypto.merlin.keystore.file=stsrealm_b.jks
 
