--- a/services/sts/pom.xml
+++ b/services/sts/pom.xml
@@ -280,7 +280,7 @@
 					<plugin>
 						<groupId>org.mortbay.jetty</groupId>
 						<artifactId>jetty-maven-plugin</artifactId>
-						<version>7.6.8.v20121106</version>
+						<version>${jetty.version}</version>
 						<inherited>true</inherited>
 						<configuration>
 							<webApp>
