--- a/examples/springPreauthWebapp/pom.xml
+++ b/examples/springPreauthWebapp/pom.xml
@@ -30,7 +30,6 @@
     <packaging>war</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>3.1.3.RELEASE</spring.version>
     </properties>
     <dependencies>
         <dependency>
@@ -65,12 +64,12 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>${spring.version}</version>
+            <version>${spring.security.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
-            <version>${spring.version}</version>
+            <version>${spring.security.version}</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
