Manifest update to support jetty 7/8 for OSGi
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1524083 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/jetty/pom.xml
+++ b/plugins/jetty/pom.xml
@@ -155,6 +155,7 @@
                         </Export-Package>
                         <Import-Package>
                             !org.apache.cxf.fediz.jetty*,
+                            org.eclipse.jetty.*;version="[7.6,9)",
                             org.apache.cxf.fediz.core.*,
                             *;resolution:=optional
                         </Import-Package>
