--- a/examples/wsclientWebapp/webservice/service/src/main/resources/stsTruststore.properties
+++ b/examples/wsclientWebapp/webservice/service/src/main/resources/stsTruststore.properties
@@ -1,5 +1,5 @@
 org.apache.ws.security.crypto.provider=org.apache.ws.security.components.crypto.Merlin
 org.apache.ws.security.crypto.merlin.keystore.type=jks
-org.apache.ws.security.crypto.merlin.keystore.password=wsspass
-org.apache.ws.security.crypto.merlin.keystore.file=webserviceKeystore.jks
+org.apache.ws.security.crypto.merlin.keystore.password=storepass
+org.apache.ws.security.crypto.merlin.keystore.file=ststrust.jks
 
