Refactored STS to support two realms by default
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1535508 13f79535-47bb-0310-9956-ffa450edef68

--- a/services/sts/src/main/resources/log4j.properties
+++ b/services/sts/src/main/resources/log4j.properties
@@ -26,7 +26,6 @@ log4j.appender.LOGFILE.layout.ConversionPattern=%d [%t] %-5p %c %x - %m%n
 log4j.appender.AUDIT=org.apache.log4j.FileAppender
 log4j.appender.AUDIT.File=${catalina.base}/logs/audit.log
 log4j.appender.AUDIT.Append=true
-log4j.appender.AUDIT.Threshold=INFO
+log4j.appender.AUDIT.Threshold=DEBUG
 log4j.appender.AUDIT.layout=org.apache.cxf.sts.event.LoggerPatternLayoutLog4J
 log4j.appender.AUDIT.layout.ConversionPattern=%m%n
-
