--- a/services/pom.xml
+++ b/services/pom.xml
@@ -22,7 +22,7 @@
    <parent>
        <groupId>org.apache.cxf.fediz</groupId>
        <artifactId>fediz</artifactId>
-       <version>1.1.0-SNAPSHOT</version>
+       <version>1.1.0</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <groupId>org.apache.cxf.fediz</groupId>
