--- a/services/sts/pom.xml
+++ b/services/sts/pom.xml
@@ -9,13 +9,12 @@
 	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
 	OF ANY KIND, either express or implied. See the License for the specific 
 	language governing permissions and limitations under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.apache.cxf.fediz</groupId>
 		<artifactId>fediz</artifactId>
-		<version>1.1.0-SNAPSHOT</version>
+		<version>1.1.0</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>fediz-idp-sts</artifactId>
@@ -189,8 +188,7 @@
 
 							<scanIntervalSeconds>0</scanIntervalSeconds>
 							<connectors>
-								<connector
-									implementation="org.eclipse.jetty.server.ssl.SslSelectChannelConnector">
+								<connector implementation="org.eclipse.jetty.server.ssl.SslSelectChannelConnector">
 									<port>${sts.https.port}</port>
 									<maxIdleTime>60000</maxIdleTime>
 									<keystore>${project.build.directory}/test-classes/jetty-ssl.keystore</keystore>
