--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -119,6 +119,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+            <version>${cxf.version}</version>
+        </dependency> 
     </dependencies>
     <build>
     	<resources>
