--- a/services/idp/src/main/webapp/WEB-INF/web.xml
+++ b/services/idp/src/main/webapp/WEB-INF/web.xml
@@ -43,9 +43,17 @@
 			<param-name>realm</param-name>
 			<param-value>${realm-uri}</param-value>
 		</init-param>
-	</servlet>	
-	
-	
+	</servlet>
+	<servlet>
+        <servlet-name>CXFServlet</servlet-name>
+        <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>CXFServlet</servlet-name>
+        <url-pattern>/services/*</url-pattern>
+    </servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>idp</servlet-name>
 		<url-pattern>/federation</url-pattern>
